## Change history

### [2022/01/26]
* The Polyline2D and Polyline3D Explode method will preserve the smooth type.
* Deleted the references to the ImageDefinitionReactor from the ImageDefinition they will be created when the DXF is saved.
* (fixed) Issues, introduced in the last two updates, when saving Polyline2D, Polyline3D, and PolyfaceMesh entities that were part of a Block.

### [2021/12/06]
* Rename Face3d to Face3D.
* Rename Face3dEdgeFlags to Face3DEdgeFlags.
* Rename DxfDocument.Entities.Faces3d to DxfDocument.Entities.Faces3D.
* Rename LwPolyline to Polyline2D.
* Rename LwPolylineVertex to Polyline2DVertex.
* Rename EntityType.LwPolyline to EntityType.Polyline2D.
* Rename DxfDocument.Entities.LwPolylines to DxfDocument.Entities.Polylines2D.
* Rename Polyline to Polyline3D.
* Rename EntityType.Polyline to EntityType.Polyline3D.
* Rename Polyline.ToLwPolyline to Polyline3D.ToPolyline2D.
* Rename DxfDocument.Entities.Polylines to DxfDocument.Entities.Polylines3D.
* Rename Spline.ToPolyline to Spline.ToPolyline3D.
* Rename Spline.ToLwPolyline to Spline.ToPolyline2D.
* Rename Circle.ToPolyline to Circle.ToPolyline2D.
* Rename Arc.ToPolyline to Arc.ToPolyline2D.
* Added the method Transform to the UCS class to transform points from world coordinates (WCS) to local/object coordinates (OCS), and vice versa.
* Deleted the property Elevation from the UCS class, although it appears as a parameter in the DXF, it is unnecessary. It seems that it does not play any role and it is always zero.
* Added the property CurrentUCS to the DrawingVariables, that represents the current/active UCS. It encapsulates the the DrawingVariables UcsOrg, UcsXDir, and UcsYDir.
* Deleted the DrawingVariables UcsOrg, UcsXDir, and UcsYDir.
* Added the property Description to the Layer class. In the DXF, this information is stored as extended data.